# webos-initscripts

./: .gitignore  CMakeLists.txt  NOTICE  README.md
files/launch/: SetInitEnv.conf.in  alignment  alignment.conf  banner.conf.in  banner.in  bootmisc.conf.in  bootmisc.in  cgroups.conf.in  cgroups.in  connman.conf  console.conf  console.in  control-alt-delete.in  crond.conf.in  crond.in  dbus.conf.in  devpts.conf  devpts.in  dropbear.conf  dropbear.conf.in  finish.in  hostname.in  init-boot-done.conf.in  modutils.conf.in  modutils.in  mountall.conf.in  mountall.in  networking.conf.in  networking.in  populate-volatile.conf.in  populate-volatile.in  rc0.in  rcS  reboot.conf.in  reboot.in  shutdown.conf.in  start_update.conf.in  start_update.in  swaphack.in  sysctl.conf  (+11 more)
scripts/public/: reboot_ls-hubd_if.sh.in
